경로 변경 및 통계 수정

--- a/src/infranet_team1/templates/task/index.html
+++ b/src/infranet_team1/templates/task/index.html
@@ -9,7 +9,7 @@
     
     <a href="{{ url_for('task.stat') }}">📈 업무 통계 보기</a>
 
-    <form method="GET" action="{{ url_for('task.index') }}">
+    <form method="GET" action="{{ url_for('task.home') }}">
         팀:
         <select name="team">
             <option value="전체">전체</option>
