--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -118,8 +118,8 @@
       <details open>
         <summary>📋 업무관리</summary>
         <ul>
-          <li><a href="#">업무 조회 및 관리</a></li>
-          <li><a href="{{ url_for('task.home') }}">업무 통계</a></li>
+          <li><a href="{{ url_for('task.home') }}">업무 조회 및 관리</a></li>
+          <li><a href="{{ url_for('task.stat') }}">업무 통계</a></li>
         </ul>
       </details>
 
