--- a/src/infranet_team1/templates/base.html
+++ b/src/infranet_team1/templates/base.html
@@ -32,7 +32,8 @@
             <div class="menu-item">
                 <a href="#">커뮤니티</a>
                 <div class="dropdown-menu">
-                    <a href="{{ url_for('write.home') }}">자유게시판</a>
+                    <a href="{{ url_for('write.home') }}">게시판</a>
+                    <a href="{{ url_for('write.home') }}">게시물 요약</a>
                 </div>
             </div>
             
@@ -47,7 +48,7 @@
             <div class="menu-item">
                 <a href="#">업무 관리</a>
                 <div class="dropdown-menu">
-                    <a href="#">업무 조회 및 관리</a>
+                    <a href="{{ url_for('task.home') }}">업무 조회 및 관리</a>
                     <a href="{{ url_for('task.home') }}">업무 통계</a>
                 </div>
             </div>
