--- a/src/infranet_team1/templates/client/create.html
+++ b/src/infranet_team1/templates/client/create.html
@@ -24,8 +24,8 @@
         <option value="Inactive">Inactive</option>
       </select>
     </p>
-    <p><label>계약 시작일:</label><input type="date" name="contract_start_date"></p>
-    <p><label>계약 종료일:</label><input type="date" name="contract_end_date"></p>
+    <p><label>계약 시작일:</label><input type="date" name="contract_start_date" required></p>
+    <p><label>계약 종료일:</label><input type="date" name="contract_end_date" required></p>
   </fieldset>
 
   <fieldset>
